@startuml Diagrama de Classe - Biblioteca

class Livro {
    + titulo: string
    + autor: string
    + isbn: string
    + disponivel: boolean
    + emprestar(): void
    + devolver(): void
}

class Cliente {
    + nome: string
    + id: int
    + telefone: string
    + endereco: string
    + realizarEmprestimo(): void
    + devolverLivro(): void
}

class Emprestimo {
    + dataEmprestimo: date
    + dataDevolucao: date
    + livro: Livro
    + cliente: Cliente
    + calcularMulta(): void
    + finalizarEmprestimo(): void
}

class Funcionario {
    + nome: string
    + matricula: int
    + cargo: string
    + registrarEmprestimo(): void
    + registrarDevolucao(): void
}

' Relacionamentos
Cliente "1" -- "0..*" Emprestimo : realiza
Livro "1" --> "0..*" Emprestimo : está associado
Funcionario "1" --> "0..*" Emprestimo : registra

@enduml
